--- a/.classpath
+++ b/.classpath
@@ -13,4 +13,10 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
 	<classpathentry kind="output" path="bin"/>
+	<classpathentry sourcepath="/home/louisld/.gradle/caches/modules-2/files-2.1/org.slf4j/slf4j-api/1.7.13/96e785df399a4e1a6c030877097807b7e18520cc/slf4j-api-1.7.13-sources.jar" kind="lib" path="/home/louisld/.gradle/caches/modules-2/files-2.1/org.slf4j/slf4j-api/1.7.13/7fcf30c25b8f4a9379b9dad0d3f487b25272c026/slf4j-api-1.7.13.jar"/>
+	<classpathentry kind="lib" path="/home/louisld/.gradle/caches/modules-2/files-2.1/jfreechart/jfreechart/1.0.0/8feb9d428e47a18e4fe31217cd54f4d2b96bad98/jfreechart-1.0.0.jar"/>
+	<classpathentry sourcepath="/home/louisld/.gradle/caches/modules-2/files-2.1/junit/junit/4.12/a6c32b40bf3d76eca54e3c601e5d1470c86fcdfa/junit-4.12-sources.jar" kind="lib" path="/home/louisld/.gradle/caches/modules-2/files-2.1/junit/junit/4.12/2973d150c0dc1fefe998f834810d68f278ea58ec/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="/home/louisld/.gradle/caches/modules-2/files-2.1/jfree/jfreechart/1.0.0/7776a5e3f555643720415a47e022daac9cca32b1/jfreechart-1.0.0.jar"/>
+	<classpathentry sourcepath="/home/louisld/.gradle/caches/modules-2/files-2.1/org.hamcrest/hamcrest-core/1.3/1dc37250fbc78e23a65a67fbbaf71d2e9cbc3c0b/hamcrest-core-1.3-sources.jar" kind="lib" path="/home/louisld/.gradle/caches/modules-2/files-2.1/org.hamcrest/hamcrest-core/1.3/42a25dc3219429f0e5d060061f71acb49bf010a0/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="/home/louisld/.gradle/caches/modules-2/files-2.1/jfree/jcommon/1.0.0/25b1bfc1bb224a270e30cc8c19c4b8f63108ada0/jcommon-1.0.0.jar"/>
 </classpath>
